reupload html + css

--- a/des-domestic.html
+++ b/des-domestic.html
@@ -133,7 +133,7 @@
         <section class="tour-list">
         <!-- Tour 1 -->
               <div class="tour-card">
-                <img src="./Figma_pic/Hagiang(1)(1).png" alt="Tour Hà Giang">
+                <img src="./Destination_pic/Hagiang(1)(1).png" alt="Tour Hà Giang">
                 <div class="tour-info">
                   <div>
                     <h3>Hà Giang - Lũng Cú - Đồng Văn</h3>
