--- a/destination.html
+++ b/destination.html
@@ -87,14 +87,14 @@
     <p>Điểm đến hấp dẫn</p>
     <section class="destination-box">
       <a href="./des-domestic.html" class="box">
-        <img src="./Figma_pic/location2.jpg" alt="Trong nước" />
+        <img src="./Destination_pic/location2.jpg" alt="Trong nước" />
         <div class="box-title">
           <h2>Trong nước</h2>
           <p>4 Tours+</p>
         </div>
       </a>
       <a href="#" class="box">
-        <img src="./Figma_pic/location3.jpg" alt="Nước ngoài" />
+        <img src="./Destination_pic/location3.jpg" alt="Nước ngoài" />
         <div class="box-title">
           <h2>Nước ngoài</h2>
         </div>
