--- a/index.html
+++ b/index.html
@@ -67,33 +67,9 @@
             <h1>MỘT CHUYẾN ĐI</h1>
             <h1>NGÀN KỶ NIỆM</h1>
             <p>Dù bạn thích phiêu lưu khám phá hay thư giãn tận hưởng, chúng tôi luôn sẵn sàng mang đến những trải nghiệm du lịch trọn vẹn nhất!</p>
-            <a href="#" class="btn">Khám phá ngay</a>
+            <a href="destination.html" class="btn">Khám phá ngay</a>
         </div>
     </section>
-    <!--Search-->
-    <section class="search-section">
-        <div class="search-container">
-            <div class="search-group">
-                <label for="destination">Bạn muốn đi đâu?*</label>
-                <div class="input-wrapper">
-                    <input type="text" placeholder="Nhập địa điểm bạn muốn đến">
-                </div>
-            </div>
-            
-            <div class="search-group">
-                <label for="tour-type">Chọn loại tour?*</label>
-                <div class="input-wrapper">
-                    <select id="tour-type">
-                        <option value="">Tiết kiệm</option>
-                        <option value="">Tiêu chuẩn</option>
-                        <option value="">Cao cấp</option>
-                    </select>
-                </div>
-            </div>
-            <button type="submit" >Tìm kiếm</button>
-        </div>
-    </section>
-    <!--End of Search-->
     <div class="divider"></div>
     <!--About us-->
     <section class="about">
@@ -109,7 +85,7 @@
                     <li>Đặt tour dễ dàng</li>
                 </ul>
             </div>
-            <a href="#" class="btn">Tìm hiểu thêm</a>
+            <a href="about.html" target="_blank" class="btn">Tìm hiểu thêm →</a>
         </div>
         <div class="about-image">
             <img src="img/about/about.jpg" alt="About Us">
@@ -218,10 +194,10 @@
               <p>(+84) 034 958 0476</p>
               <p>(+84) 034 958 0416</p>
               <div class="social-icons">
-                <img src="img/footer/social/face.svg"/>
-                <img src="img/footer/social/ins.svg"/>
-                <img src="img/footer/social/messenger.svg"/>
-                <img src="img/footer/social/tiktok.svg"/>
+                <a href="https://www.facebook.com" target="_blank"><img src="img/footer/social/face.svg"/></a>
+                <a href="https://www.instagram.com" target="_blank"><img src="img/footer/social/ins.svg"/></a>
+                <a href="https://www.messenger.com" target="_blank"><img src="img/footer/social/messenger.svg"/></a>
+                <a href="https://www.tiktok.com" target="_blank"><img src="img/footer/social/tiktok.svg"/></a>
               </div>
             </div>
             
