--- a/about-us.html
+++ b/about-us.html
@@ -172,6 +172,57 @@
     </div>
   </section>
 
+<!-- Review Section -->
+<section class="review-section">
+  <div class="review-header">
+    <span class="sub-title">Đánh giá thực tế</span>
+    <h2>Ý kiến của khách hàng về chuyến đi</h2>
+  </div>
+  <div class="review-carousel">
+    <button class="carousel-btn"><i class="fa-solid fa-chevron-left"></i></button>
+    <div class="review-content">
+      <div class="review-item active">
+        <p>“Dịch vụ rất chuyên nghiệp. Rất đáng để giới thiệu. Tuyệt vời! Chỉ với thời gian ngắn ngủi nhưng tôi đã được chiêm ngưỡng những bãi biển đẹp nhất mà tôi từng thấy.”</p>
+        <div class="rating">
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+        </div>
+        <h3>Tung Sahur</h3>
+        <p class="location">London, Anh</p>
+      </div>
+      <div class="review-item">
+        <p>“Hành trình tuyệt vời, hướng dẫn viên nhiệt tình và chuyên nghiệp. Tôi đã có những trải nghiệm đáng nhớ và học được nhiều điều mới mẻ.”</p>
+        <div class="rating">
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+        </div>
+        <h3>Nguyễn Văn A</h3>
+        <p class="location">Hà Nội, Việt Nam</p>
+      </div>
+      <div class="review-item">
+        <p>“Chuyến đi vượt ngoài mong đợi! Đội ngũ tổ chức chu đáo, mọi thứ đều được chuẩn bị kỹ lưỡng. Tôi sẽ quay lại vào kỳ nghỉ tới!”</p>
+        <div class="rating">
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+        </div>
+        <h3>Emma Brown</h3>
+        <p class="location">Sydney, Úc</p>
+      </div>
+    </div>
+    <button class="carousel-btn"><i class="fa-solid fa-chevron-right"></i></button>
+  </div>
+</section>
+
+
   <!-- Footer -->
   <footer class="footer">
     <div class="footer-section">
