--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         </ul>
                     </div>
                 </li>
-                <li><a href="#">Giới thiệu</a></li>
+                <li><a href="./about-us.html">Giới thiệu</a></li>
                 <li><a href="#">Liên hệ</a></li>
                 <li><a href="#">Tin tức</a></li>
             </ul>
