--- a/index.html
+++ b/index.html
@@ -199,28 +199,27 @@
             <img src="img/footer/social/tiktok.svg" />
           </div>
         </div>
-    
         <div class="footer-section">
           <h4>Thông tin</h4>
           <ul>
-            <li>Giới thiệu</li>
-            <li>Tin tức</li>
-            <li>Liên hệ</li>
+            <li><a href="about.html" target="_blank">Giới thiệu</li></a>
+            <li><a href="news.html" target="_blank">Tin tức</li></a>
+            <li><a href="contact.html" target="_blank">Liên Hệ</li></a>
           </ul>
         </div>
         <div class="footer-section">
           <h4>Dịch vụ</h4>
-          <strong>Du lịch trong nước</strong>
+          <strong><a href="des-domestic.html">Du lịch trong nước</a></strong>
           <ul>
-            <li>Miền Bắc</li>
-            <li>Miền Nam</li>
-            <li>Miền Trung</li>
+            <li><a href="destinations/sub_domestic/mienbac.html">Miền Bắc</li></a>
+            <li><a href="destinations/sub_domestic/mientrung.html">Miền Trung</li></a>
+            <li><a href="destinations/sub_domestic/miennam.html">Miền Nam</li></a>
           </ul>
-          <strong>Du lịch nước ngoài</strong>
+          <strong><a href="des-overseas.html">Du lịch nước ngoài</a></strong>
           <ul>
-            <li>Châu Âu</li>
-            <li>Châu Á</li>
-            <li>Châu Mỹ</li>
+            <li><a href="destinations/sub_overseas/europe.html">Châu Âu</li></a>
+            <li><a href="destinations/sub_overseas/asia.html">Châu Á</li></a>
+            <li><a href="destinations/sub_overseas/americas.html">Châu Mỹ</li></a>
           </ul>
         </div>
     
@@ -228,7 +227,7 @@
           <h4>Đăng ký để nhận tin từ chúng tôi:</h4>
           <div class="subscribe-box">
             <input type="email" placeholder="Your email" />
-            <img src="https://img.icons8.com/ios-filled/50/000000/telegram-app.png" />
+            <img src="img/footer/send.svg"/>
           </div>
           <h4>Chấp nhận thanh toán</h4>
           <div class="payment-icons">
