href for nav bar mf

--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
               <li><a href="/des-domestic.html">Du lịch trong nước</a>
                 <div class="sub_menu_2">
                   <ul>
-                    <li><a href="/destinations/sub_domestic/mienbac.html"></a></li>
+                    <li><a href="/destinations/sub_domestic/mienbac.html">Miền Bắc</a></li>
                     <li><a href="/destinations/sub_domestic/mientrung.html">Miền Trung</a></li>
                     <li><a href="/destinations/sub_domestic/miennam.html">Miền Nam</a></li>
                   </ul>
