--- a/des-domestic.html
+++ b/des-domestic.html
@@ -25,7 +25,6 @@
     <link rel="stylesheet" href="css/style-des-domestic.css">
     <title>ChipTrip - Điểm đến Việt Nam</title>
 </head>
-
 <body>
   <header>
     <div><img class="logo" src="img/logo.svg" alt="logo" /></div>
@@ -215,7 +214,7 @@
                     <div class="tour-details">
                       <div class="detail-item">
                         <span><i class="fa-solid fa-ticket"></i></span>
-                        <span>Mã tour: NDHAN200</span>
+                        <span>Mã tour: NDHALONG-123</span>
                       </div>
                       <div class="detail-item">
                         <span><i class="fa-solid fa-clock"></i></span>
@@ -254,7 +253,7 @@
                     <div class="tour-details">
                       <div class="detail-item">
                         <span><i class="fa-solid fa-ticket"></i></span>
-                        <span>Mã tour: NDHAN200</span>
+                        <span>Mã tour: NDDALAT-456</span>
                       </div>
                       <div class="detail-item">
                         <span><i class="fa-solid fa-clock"></i></span>
@@ -293,7 +292,7 @@
                     <div class="tour-details">
                       <div class="detail-item">
                         <span><i class="fa-solid fa-ticket"></i></span>
-                        <span>Mã tour: NDHAN200</span>
+                        <span>Mã tour: NDCAOBANG-789</span>
                       </div>
                       <div class="detail-item">
                         <span><i class="fa-solid fa-clock"></i></span>
@@ -332,7 +331,7 @@
                     <div class="tour-details">
                       <div class="detail-item">
                         <span><i class="fa-solid fa-ticket"></i></span>
-                        <span>Mã tour: JGKDF241-251</span>
+                        <span>Mã tour: NDDANANG-3211</span>
                       </div>
                       <div class="detail-item">
                         <span><i class="fa-solid fa-clock"></i></span>
@@ -410,7 +409,7 @@
                     <div class="tour-details">
                       <div class="detail-item">
                         <span><i class="fa-solid fa-ticket"></i></span>
-                        <span>Mã tour: JGKDF241-251</span>
+                        <span>Mã tour: NDCATBA-987</span>
                       </div>
                       <div class="detail-item">
                         <span><i class="fa-solid fa-clock"></i></span>
@@ -449,7 +448,7 @@
                     <div class="tour-details">
                       <div class="detail-item">
                         <span><i class="fa-solid fa-ticket"></i></span>
-                        <span>Mã tour: JGKDF241-251</span>
+                        <span>Mã tour: NDYENBAI-852</span>
                       </div>
                       <div class="detail-item">
                         <span><i class="fa-solid fa-clock"></i></span>
@@ -488,7 +487,7 @@
                     <div class="tour-details">
                       <div class="detail-item">
                         <span><i class="fa-solid fa-ticket"></i></span>
-                        <span>Mã tour: JGKDF241-251</span>
+                        <span>Mã tour: NDMOCHAU-741</span>
                       </div>
                       <div class="detail-item">
                         <span><i class="fa-solid fa-clock"></i></span>
@@ -527,7 +526,7 @@
                     <div class="tour-details">
                       <div class="detail-item">
                         <span><i class="fa-solid fa-ticket"></i></span>
-                        <span>Mã tour: JGKDF241-251</span>
+                        <span>Mã tour: NDSAPA-LC-HL-963</span>
                       </div>
                       <div class="detail-item">
                         <span><i class="fa-solid fa-clock"></i></span>
@@ -566,7 +565,7 @@
                     <div class="tour-details">
                       <div class="detail-item">
                         <span><i class="fa-solid fa-ticket"></i></span>
-                        <span>Mã tour: JGKDF241-251</span>
+                        <span>Mã tour: NDQNINHBINH-159</span>
                       </div>
                       <div class="detail-item">
                         <span><i class="fa-solid fa-clock"></i></span>
@@ -605,7 +604,7 @@
                     <div class="tour-details">
                       <div class="detail-item">
                         <span><i class="fa-solid fa-ticket"></i></span>
-                        <span>Mã tour: JGKDF241-251</span>
+                        <span>Mã tour: NDVANHO-357</span>
                       </div>
                       <div class="detail-item">
                         <span><i class="fa-solid fa-clock"></i></span>
@@ -644,7 +643,7 @@
                     <div class="tour-details">
                       <div class="detail-item">
                         <span><i class="fa-solid fa-ticket"></i></span>
-                        <span>Mã tour: JGKDF241-251</span>
+                        <span>Mã tour: NDVESAK-258</span>
                       </div>
                       <div class="detail-item">
                         <span><i class="fa-solid fa-clock"></i></span>
@@ -683,7 +682,7 @@
                     <div class="tour-details">
                       <div class="detail-item">
                         <span><i class="fa-solid fa-ticket"></i></span>
-                        <span>Mã tour: JGKDF241-251</span>
+                        <span>Mã tour: NDMOCHAU-753</span>
                       </div>
                       <div class="detail-item">
                         <span><i class="fa-solid fa-clock"></i></span>
@@ -720,60 +719,60 @@
 
     <!-- ################################# FOOTER ################################# -->
     <div class="footer-container"></div>
-    <footer class="footer">
-        <div class="footer-section">
-          <h4>Liên hệ</h4>
-          <p>235 Hoàng Quốc Việt, Cổ Nhuế, Bắc Từ Liêm, Hà Nội</p>
-          <p>Từ 7:00 - 17:30 hằng ngày</p>
-          <p>Từ 7:00 - 15:00 Chủ Nhật</p>
-          <hr style="width: 80%; margin: 10px 0;" />
-          <p>Hỗ trợ khách hàng qua hotline 24/7</p>
-          <p>(+84) 034 958 0476</p>
-          <p>(+84) 034 958 0416</p>
-          <div class="social-icons">
-            <img src="img/footer/social/face.svg" />
-            <img src="img/footer/social/ins.svg" />
-            <img src="img/footer/social/messenger.svg" />
-            <img src="img/footer/social/tiktok.svg" />
-          </div>
-        </div>
-    
-        <div class="footer-section">
-          <h4>Thông tin</h4>
-          <ul>
-            <li>Giới thiệu</li>
-            <li>Tin tức</li>
-            <li>Liên hệ</li>
-          </ul>
-        </div>
-        <div class="footer-section">
-          <h4>Dịch vụ</h4>
-          <strong>Du lịch trong nước</strong>
-          <ul>
-            <li>Miền Bắc</li>
-            <li>Miền Nam</li>
-            <li>Miền Trung</li>
-          </ul>
-          <strong>Du lịch nước ngoài</strong>
-          <ul>
-            <li>Châu Âu</li>
-            <li>Châu Á</li>
-            <li>Châu Mỹ</li>
-          </ul>
-        </div>
-    
-        <div class="footer-section">
-          <h4>Đăng ký để nhận tin từ chúng tôi:</h4>
-          <div class="subscribe-box">
-            <input type="email" placeholder="Your email" />
-            <img src="https://img.icons8.com/ios-filled/50/000000/telegram-app.png" />
-          </div>
-          <h4>Chấp nhận thanh toán</h4>
-          <div class="payment-icons">
-            <img src="img/footer/icon.png" />
-          </div>
-        </div>
-      </footer>
+<!-- Footer -->
+<footer class="footer">
+  <div class="footer-section">
+    <h4>Liên hệ</h4>
+    <p>235 Hoàng Quốc Việt, Cổ Nhuế, Bắc Từ Liêm, Hà Nội</p>
+    <p>Từ 7:00 - 17:30 hằng ngày</p>
+    <p>Từ 7:00 - 15:00 Chủ Nhật</p>
+    <hr style="width: 80%; margin: 10px 0;" />
+    <p>Hỗ trợ khách hàng qua hotline 24/7</p>
+    <p>(+84) 034 958 0476</p>
+    <p>(+84) 034 958 0416</p>
+    <div class="social-icons">
+      <img src="img/footer/social/face.svg" />
+      <img src="img/footer/social/ins.svg" />
+      <img src="img/footer/social/messenger.svg" />
+      <img src="img/footer/social/tiktok.svg" />
+    </div>
+  </div>
+  <div class="footer-section">
+    <h4>Thông tin</h4>
+    <ul>
+      <li><a href="about.html" target="_blank">Giới thiệu</li></a>
+      <li><a href="news.html" target="_blank">Tin tức</li></a>
+      <li><a href="contact.html" target="_blank">Liên Hệ</li></a>
+    </ul>
+  </div>
+  <div class="footer-section">
+    <h4>Dịch vụ</h4>
+    <strong><a href="des-domestic.html">Du lịch trong nước</a></strong>
+    <ul>
+      <li><a href="destinations/sub_domestic/mienbac.html">Miền Bắc</li></a>
+      <li><a href="destinations/sub_domestic/mientrung.html">Miền Trung</li></a>
+      <li><a href="destinations/sub_domestic/miennam.html">Miền Nam</li></a>
+    </ul>
+    <strong><a href="des-overseas.html">Du lịch nước ngoài</a></strong>
+    <ul>
+      <li><a href="destinations/sub_overseas/europe.html">Châu Âu</li></a>
+      <li><a href="destinations/sub_overseas/asia.html">Châu Á</li></a>
+      <li><a href="destinations/sub_overseas/americas.html">Châu Mỹ</li></a>
+    </ul>
+  </div>
+
+  <div class="footer-section">
+    <h4>Đăng ký để nhận tin từ chúng tôi:</h4>
+    <div class="subscribe-box">
+      <input type="email" placeholder="Your email" />
+      <img src="img/footer/send.svg"/>
+    </div>
+    <h4>Chấp nhận thanh toán</h4>
+    <div class="payment-icons">
+      <img src="img/footer/icon.png" />
+    </div>
+  </div>
+</footer>
     <script src="js/des.js"></script>
 </body>
 </html>
