--- a/about.html
+++ b/about.html
@@ -22,8 +22,9 @@
   <meta name="msapplication-TileImage" content="./icon/ms-icon-144x144.png" />
   <meta name="theme-color" content="#ffffff" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dancing+Script">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
-  <link rel="stylesheet" href="css/style-abs.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"/>
+  <link rel="stylesheet" href="css/style-abs.css"/>
+  <link rel="stylesheet" href="css/responsive.css"/>
   <title>ChipTrip - Giới thiệu</title>
 </head>
 
@@ -31,6 +32,9 @@
   <!-- Header -->
   <header>
     <div><img class="logo" src="img/logo.svg" alt="logo" /></div>
+    <div class="menu-toggle" id="menu-toggle">
+      <i class="fa fa-bars"></i>
+    </div>
     <nav id="navbar">
       <ul class="nav_links">
         <li><a href="./about.html">Giới thiệu</a></li>
@@ -108,7 +112,7 @@
           </span>
         </div>
       </div>
-      <a href="#" class="btn">Booking Now</a>
+      <a href="destination.html" class="btn">Booking Now</a>
     </div>
     <div>
       <img src="img/about/ab1.png" alt="ab1" width="650px">
@@ -202,7 +206,7 @@
         <li><a href="destinations/sub_domestic/mientrung.html">Miền Trung</li></a>
         <li><a href="destinations/sub_domestic/miennam.html">Miền Nam</li></a>
       </ul>
-      <strong><a href="des-overseas.html">Du lịch nước ngoài</a></strong>
+      <strong><a href="des-oversea.html">Du lịch nước ngoài</a></strong>
       <ul>
         <li><a href="destinations/sub_overseas/europe.html">Châu Âu</li></a>
         <li><a href="destinations/sub_overseas/asia.html">Châu Á</li></a>
@@ -213,15 +217,20 @@
     <div class="footer-section">
       <h4>Đăng ký để nhận tin từ chúng tôi:</h4>
       <div class="subscribe-box">
-        <input type="email" placeholder="Your email" />
-        <img src="img/footer/send.svg"/>
+        <input id="email-input" type="email" placeholder="Your email" />
+        <button id="submit-button" style="background: none; border: none; padding: 0;">
+          <img src="img/footer/send.svg" alt="Gửi" style="width: 24px; height: 24px;">
+        </button>
       </div>
+      <div id="message" style="margin-top: 8px; font-size: 14px;"></div>
+      <script src="js/footer.js"></script>
       <h4>Chấp nhận thanh toán</h4>
       <div class="payment-icons">
         <img src="img/footer/icon.png" />
       </div>
     </div>
   </footer>
-  <script src="/js/script.js"></script>
+  <script src="js/script.js"></script>
+  <script src="js/responsive.js"></script>
 </body>
 </html>
