--- a/checkout.html
+++ b/checkout.html
@@ -22,6 +22,8 @@
     <meta name="theme-color" content="#ffffff">
     <title>Thanh toán</title>
     <link rel="stylesheet" href="css/checkout.css">
+    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"/>
 </head>
 <body>
     <header>
@@ -106,60 +108,65 @@
             </div>
         </div>
     </section>
-  <footer class="footer">
-    <div class="footer-section">
-      <h4>Liên hệ</h4>
-      <p>235 Hoàng Quốc Việt, Cổ Nhuế, Bắc Từ Liêm, Hà Nội</p>
-      <p>Từ 7:00 - 17:30 hằng ngày</p>
-      <p>Từ 7:00 - 15:00 Chủ Nhật</p>
-      <hr style="width: 80%; margin: 10px 0;" />
-      <p>Hỗ trợ khách hàng qua hotline 24/7</p>
-      <p>(+84) 034 958 0476</p>
-      <p>(+84) 034 958 0416</p>
-      <div class="social-icons">
-        <img src="img/footer/social/face.svg" />
-        <img src="img/footer/social/ins.svg" />
-        <img src="img/footer/social/messenger.svg" />
-        <img src="img/footer/social/tiktok.svg" />
+    <footer class="footer">
+      <div class="footer-section">
+        <h4>Liên hệ</h4>
+        <p>235 Hoàng Quốc Việt, Cổ Nhuế, Bắc Từ Liêm, Hà Nội</p>
+        <p>Từ 7:00 - 17:30 hằng ngày</p>
+        <p>Từ 7:00 - 15:00 Chủ Nhật</p>
+        <hr style="width: 80%; margin: 10px 0;" />
+        <p>Hỗ trợ khách hàng qua hotline 24/7</p>
+        <p>(+84) 034 958 0476</p>
+        <p>(+84) 034 958 0416</p>
+        <div class="social-icons">
+          <img src="img/footer/social/face.svg" />
+          <img src="img/footer/social/ins.svg" />
+          <img src="img/footer/social/messenger.svg" />
+          <img src="img/footer/social/tiktok.svg" />
+        </div>
       </div>
-    </div>
-    <div class="footer-section">
-      <h4>Thông tin</h4>
-      <ul>
-        <li><a href="about.html" target="_blank">Giới thiệu</li></a>
-        <li><a href="news.html" target="_blank">Tin tức</li></a>
-        <li><a href="contact.html" target="_blank">Liên Hệ</li></a>
-      </ul>
-    </div>
-    <div class="footer-section">
-      <h4>Dịch vụ</h4>
-      <strong><a href="des-domestic.html">Du lịch trong nước</a></strong>
-      <ul>
-        <li><a href="destinations/sub_domestic/mienbac.html">Miền Bắc</li></a>
-        <li><a href="destinations/sub_domestic/mientrung.html">Miền Trung</li></a>
-        <li><a href="destinations/sub_domestic/miennam.html">Miền Nam</li></a>
-      </ul>
-      <strong><a href="des-overseas.html">Du lịch nước ngoài</a></strong>
-      <ul>
-        <li><a href="destinations/sub_overseas/europe.html">Châu Âu</li></a>
-        <li><a href="destinations/sub_overseas/asia.html">Châu Á</li></a>
-        <li><a href="destinations/sub_overseas/americas.html">Châu Mỹ</li></a>
-      </ul>
-    </div>
-
-    <div class="footer-section">
-      <h4>Đăng ký để nhận tin từ chúng tôi:</h4>
-      <div class="subscribe-box">
-        <input type="email" placeholder="Your email" />
-        <img src="img/footer/send.svg"/>
+      <div class="footer-section">
+        <h4>Thông tin</h4>
+        <ul>
+          <li><a href="about.html" target="_blank">Giới thiệu</li></a>
+          <li><a href="news.html" target="_blank">Tin tức</li></a>
+          <li><a href="contact.html" target="_blank">Liên Hệ</li></a>
+        </ul>
       </div>
-      <h4>Chấp nhận thanh toán</h4>
-      <div class="payment-icons">
-        <img src="img/footer/icon.png" />
+      <div class="footer-section">
+        <h4>Dịch vụ</h4>
+        <strong><a href="des-domestic.html">Du lịch trong nước</a></strong>
+        <ul>
+          <li><a href="destinations/sub_domestic/mienbac.html">Miền Bắc</li></a>
+          <li><a href="destinations/sub_domestic/mientrung.html">Miền Trung</li></a>
+          <li><a href="destinations/sub_domestic/miennam.html">Miền Nam</li></a>
+        </ul>
+        <strong><a href="des-oversea.html">Du lịch nước ngoài</a></strong>
+        <ul>
+          <li><a href="destinations/sub_overseas/europe.html">Châu Âu</li></a>
+          <li><a href="destinations/sub_overseas/asia.html">Châu Á</li></a>
+          <li><a href="destinations/sub_overseas/americas.html">Châu Mỹ</li></a>
+        </ul>
       </div>
-    </div>
-  </footer>
+  
+      <div class="footer-section">
+        <h4>Đăng ký để nhận tin từ chúng tôi:</h4>
+        <div class="subscribe-box">
+          <input id="email-input" type="email" placeholder="Your email" />
+          <button id="submit-button" style="background: none; border: none; padding: 0;">
+            <img src="img/footer/send.svg" alt="Gửi" style="width: 24px; height: 24px;">
+          </button>
+        </div>
+        <div id="message" style="margin-top: 8px; font-size: 14px;"></div>
+        <script src="js/footer.js"></script>
+        <h4>Chấp nhận thanh toán</h4>
+        <div class="payment-icons">
+          <img src="img/footer/icon.png" />
+        </div>
+      </div>
+    </footer>
   <script src="js/checkout.js"></script>
   <script src="js/script.js"></script>
+  <script src="js/responsive.js"></script>
 </body>
 </html>
